## Process this file with automake to produce Makefile.in

LIB_BARCODE_DIR = barcode-0.98

SUBDIRS = po $(LIB_BARCODE_DIR) libglabels src data pixmaps doc

EXTRA_DIST = \
	README \
	COPYING \
	COPYING-DOCS \
	COPYING.LIBGLABELS \
	AUTHORS \
	ChangeLog \
	INSTALL \
	NEWS \
	TODO \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	glabels.spec.in \
	glabels.spec

