include $(top_srcdir)/gnome-doc-utils.make

dist-hook: doc-dist-hook

DOC_MODULE = glabels
DOC_ENTITIES = legal.xml 
DOC_INCLUDES =
DOC_FIGURES = figures/glabels-template-cd.png      	\
              figures/glabels-template-label.png	\
	      figures/glabels-template-layout.png	\
	      figures/main-window-empty.png		\
	      figures/merge-ex1-1.png			\
	      figures/merge-ex1-2.png			\
	      figures/merge-ex1-3.png			\
	      figures/merge-ex1-4.png			\
	      figures/merge-ex2-1.png			\
	      figures/merge-ex2-2.png			\
	      figures/merge-ex2-3.png			\
	      figures/merge-ex2-4.png			\
	      figures/merge-ex3-1.png			\
	      figures/merge-ex3-2.png			\
	      figures/object-editor-sidebar.png		\
	      figures/print-copies.png			\
	      figures/print-merge.png

DOC_LINGUAS = de
