include $(top_srcdir)/gnome-doc-utils.make

dist-hook: doc-dist-hook

DOC_ID = $(GLABELS_BRANCH)
DOC_FIGURES = \
	figures/glabels-logo.png			\
	figures/glabels-template-cd-label.png      	\
	figures/glabels-template-circle-label.png      	\
	figures/glabels-template-ellipse-label.png     	\
	figures/glabels-template-layout.png		\
	figures/glabels-template-rect-label.png		\
	figures/introduction-glabels-main-window.png	\
	figures/merge-ex1-1.png				\
	figures/merge-ex1-2.png				\
	figures/merge-ex1-3.png				\
	figures/merge-ex1-4.png				\
	figures/merge-ex2-1.png				\
	figures/merge-ex2-2.png				\
	figures/merge-ex2-3.png				\
	figures/merge-ex2-4.png				\
	figures/object-editor-sidebar.png		\
	figures/print-copies.png			\
	figures/print-merge.png				\
	figures/skip-fields-output.png			\
	figures/skip-fields-screenshot.png

DOC_PAGES = \
	about.page		\
	basicusage.page		\
	createnew.page		\
	customize.page		\
	customtemplate.page	\
	editprop.page		\
	index.page		\
	labelprop.page		\
	license.page		\
	mancreate.page		\
	merge-ex1.page		\
	merge-ex2.page		\
	merge-ex3.page		\
	merge-ex4.page		\
	mergefeatures.page	\
	merge.page		\
	multifile.page		\
	newlabel.page		\
	printfile.page		\
	select.page		\
	skipfields.page

DOC_LINGUAS = cs de el es fr nl ru sl
