@YELP_HELP_RULES@

HELP_ID = $(GLABELS_BRANCH)
HELP_MEDIA = \
	figures/glabels-logo.png			\
	figures/glabels-template-cd-label.png      	\
	figures/glabels-template-circle-label.png      	\
	figures/glabels-template-ellipse-label.png     	\
	figures/glabels-template-layout.png		\
	figures/glabels-template-rect-label.png		\
	figures/introduction-glabels-main-window.png	\
	figures/merge-ex1-1.png				\
	figures/merge-ex1-2.png				\
	figures/merge-ex1-3.png				\
	figures/merge-ex1-4.png				\
	figures/merge-ex2-1.png				\
	figures/merge-ex2-2.png				\
	figures/merge-ex2-3.png				\
	figures/merge-ex2-4.png				\
	figures/object-editor-sidebar.png		\
	figures/print-copies.png			\
	figures/print-merge.png				\
	figures/skip-fields-output.png			\
	figures/skip-fields-screenshot.png

HELP_FILES = \
	about.page		\
	basicusage.page		\
	createnew.page		\
	customize.page		\
	customtemplate.page	\
	editprop.page		\
	index.page		\
	labelprop.page		\
	license.page		\
	mancreate.page		\
	merge-ex1.page		\
	merge-ex2.page		\
	merge-ex3.page		\
	merge-ex4.page		\
	mergefeatures.page	\
	merge.page		\
	multifile.page		\
	newlabel.page		\
	printfile.page		\
	select.page		\
	skipfields.page

HELP_LINGUAS = cs de el es fr id nl ru sl
